sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:18: error: 'while' expected but '}' found.
} 
^